--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RentAcar": "Server=(localdb)\\mssqllocaldb; Database=RentACarDb; Trusted_Connection=true"
+  },
+
   "AllowedHosts": "*"
 }
