InMemory cache implamantation.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,6 +8,8 @@
   "ConnectionStrings": {
     "RentAcar": "Server=(localdb)\\mssqllocaldb; Database=RentACarDb; Trusted_Connection=true"
   },
-
+  "CacheSettings": {
+    "SlidingExpiration": 2
+  },
   "AllowedHosts": "*"
 }
